--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,14 @@
-<div>
-    <ul>
-        <li ng-repeat="projet in projets"><a ng-click="clickOnProjet(projet)">{{projet.name}}</a></li>
-    </ul>
-</div>
+<section class="max-width text-center big-padding-bottom">
+	<img src="images/menottes_logo.png" alt="Menottes, The SM Tools.">
+	<p class="texte">Sélectionnez un projet ou créez en un :</p>
+	<div id="main-projects">
+		<a href="" class="btn"><img src="images/logo_itk-vigne.png" alt="Disp'eau" title="Disp'eau" /></a>
+		<a href="" class="btn"><img src="images/logo_itk-preco.png" alt="Précovision" title="Précovision" /></a>
+		<a href="" class="btn"><img src="images/logo_itk-protect.png" alt="4P / Movida" title="4P / Movida" /></a>
+	</div>
+	<div id="secondary-projects">
+        <a ng-repeat="projet in projets" class="btn" ng-click="clickOnProjet(projet)">{{projet.name}}</a>
+		<a href="" class="btn-new-project">New Project</a>
+	</div>
+</section>
+<footer class="footer">by the <a href="http://itkweb.com" class="link-footer">iTK Team</a></footer>
