--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -1,5 +1,22 @@
-<div>
+<!--<div>
     <ul>
         <li ng-repeat="sprint in sprints">{{sprint.name}}</li>
     </ul>
+</div>-->
+<div class="mainContent">
+			<div class="leftNavigation">
+				<div class="staticLeftNavigation">
+				</div>
+				<div class="scrollLeftNavigation">
+				    <ul>
+						<li ng-repeat="sprint in sprints">{{sprint.name}}</li>
+					</ul>
+				</div>
+			</div>
+			<div class="boardContent">
+				<div class="topBoardBar">
+				</div>
+				<div id="ticketsList">
+				</div>
+			</div>
 </div>
