--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -1,33 +1,24 @@
 
-/*--------------------- Div principale --------------------*/
-.mainContent{
-	width:100%;
-	height:100%;
-	border: 2px solid blue;/* remove */
-}
-
 /*--------------------- Menu gauche --------------------*/
 .leftNavigation{
-	width:100px;
+	width:150px;
 	height:100%;
 	float:left;
-	border: 2px solid green;/* remove */
 }
 
 .leftNavigation > .staticLeftNavigation{
 	height:100px;
-	border: 2px solid orange;/* remove */
+	border : 1px solid rgb(221, 221, 221);
 }
 
 .leftNavigation > .scrollLeftNavigation{
-	overflow:scroll;
-	border: 2px solid orange;/* remove */
+	border : 1px solid rgb(221, 221, 221);
 }
 
 /*--------------------- Tableau de bord  --------------------*/
 .boardContent{
 	height:100%;
-	margin:10px 10px 10px 110px;
+	margin-left : 150px;
 	border: 2px solid pink;/* remove */
 }
 
