--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -29,8 +29,8 @@ body{
 
 .btn{
 	display:inline-block;
-	margin:20px;
-	padding:20px;
+	margin:10px;
+	padding:10px 20px;
 	background-color:#F0F0F0;
 	border-radius:2px;
 	border:1px solid #DDD;
@@ -39,6 +39,10 @@ body{
 	text-decoration:none;
 	vertical-align:top;
 	cursor:pointer;
+}
+.big-btn{
+	padding:20px;
+	margin:20px;
 }
 .btn:hover, .btn:focus{
 	background-color:#F5F5F5;
@@ -60,8 +64,24 @@ body{
 	text-decoration:none;
 }
 
+.btn-grey{
+    background-color:#5F5F5F;
+    border-color: #666666;
+    box-shadow: 0 -1px 0 0 #222222 inset, 0 1px 0 0 #888888 inset;
+    color: #FFFFFF;
+}
+.btn-grey:hover,.btn-grey:focus{
+    background-color:#777777;
+    color: #FFFFFF;
+    border-color: #666666;
+    box-shadow: 0 -1px 0 0 #222222 inset, 0 1px 0 0 #888888 inset;
+}
+.btn-grey:active{
+    box-shadow: 0 1px 0 0 #222222 inset, 0 -1px 0 0 #888888 inset;
+}
 
-footer{
+
+.main-footer{
 	font-size:0.6em;
 	color:#888;
 	position:absolute;
@@ -74,3 +94,66 @@ footer{
 .link-footer{
 	color:#888;
 }
+
+
+
+/*POP UP*/
+
+
+.glass{
+	width:100%;
+	height:100%;
+	position:fixed;
+	top:0;
+	left:0;
+	background-color:#000;
+	opacity:0.6;
+}
+
+.popup{
+	width:60%;
+	max-height:80%;
+	position:fixed;
+	top:10%;
+	left:50%;
+	margin-left:-30%;
+	padding:20px 20px 10px;
+	background-color:#FFF;
+	border-radius:2px;
+	box-shadow: 0 0 4px 0 #222222;
+	text-align:center;
+}
+
+
+.popup-header{
+	padding:20px 0;
+	color: #000000;
+	background-color:#F5F5F5;
+}
+.popup-section{
+	border-bottom:1px solid #F5F5F5;
+	padding:30px 10px;
+}
+.popup-footer{
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
