--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -1,8 +1,4 @@
-<!--<div>
-    <ul>
-        <li ng-repeat="sprint in sprints">{{sprint.name}}</li>
-    </ul>
-</div>-->
+
 <section class="max-width text-center big-padding-bottom ng-scope">
 			<div class="leftNavigation">
 				<div class="staticLeftNavigation">
@@ -14,6 +10,9 @@
 			</div>
 			<div class="boardContent">
 				<div class="topBoardBar">
+					<a class="btn btnTopBar" href="">
+						<img title="addNewTicket" alt="Add" src="images/icon_add.png">
+					</a>
 				</div>
 				<div id="ticketsList">
 				</div>
