--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,7 +7,7 @@
 		<a href="" class="btn big-btn"><img src="images/logo_itk-protect.png" alt="4P / Movida" title="4P / Movida" /></a>
 	</div>
 	<div id="secondary-projects">
-        <a ng-repeat="projet in projets" class="btn big-btn" ng-click="clickOnProjet(projet)">{{projet.name}}</a>
+        <a ng-repeat="projet in projets" class="btn big-btn" ng-click="clickOnProjet(projet)">{{projet.nom}}</a>
 		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Project</a>
 	</div>
 </section>
