--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="boardContent">
 				<div class="topBoardBar">
-					<a class="btn btnTopBar" href="">
+					<a class="btnTopBar" href="">
 						<img title="addNewTicket" alt="Add" src="images/icon_add.png">
 					</a>
 				</div>
