--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -27,15 +27,29 @@
 	border: 1px solid rgb(221, 221, 221);
 	margin: 5px 5px 5px 5px;
 	text-align: left;
+	background-color: rgb(240, 240, 240);
+    border: 1px solid rgb(221, 221, 221);
+    border-radius: 2px 2px 2px 2px;
+    box-shadow: 0 -1px 0 0 rgb(153, 153, 153) inset, 0 1px 0 0 rgb(255, 255, 255) inset;
+    color: rgb(94, 94, 94);
 }
 .boardContent > .topBoardBar > .btnTopBar{
-    margin: 0;
-	padding: 10px;
+    border-right: 1px solid rgb(221, 221, 221);
+    color: rgb(94, 94, 94);
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    vertical-align: top;
+	padding: 10px 20px;
 }
-
+.boardContent > .topBoardBar >.btnTopBar:hover, .boardContent > .topBoardBar >.btnTopBar:focus {
+    background-color: rgb(245, 245, 245);
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 2px 2px 2px 2px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
 .boardContent > #ticketsList{
-	border: 2px solid red;/* remove */
 	margin: 5px 5px 5px 5px;
 }
