--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -16,6 +16,9 @@
 					<a class="btnTopBar" href="">
 						<img title="editPdf" alt="Pdf" src="images/icon_doc.png">
 					</a>
+					<a class="btnTopBar" href="">
+						<img title="editPdf" alt="Pdf" src="images/icon_reporting.png">
+					</a>
 				</div>
 				<div id="ticketsList">
 				</div>
