--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -44,6 +44,11 @@ body{
 	padding:20px;
 	margin:20px;
 }
+.fullwidth-btn{
+	margin:2px 0;
+	padding: 10px 5%;
+    width: 90%;
+}
 .btn:hover, .btn:focus{
 	background-color:#F5F5F5;
 	border-radius:2px;
