--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -3,19 +3,21 @@
         <li ng-repeat="sprint in sprints">{{sprint.name}}</li>
     </ul>
 </div>-->
-<section class="max-width text-center big-padding-bottom ng-scope">
-			<div class="leftNavigation">
-				<div class="staticLeftNavigation">
-					<a class="btn ng-scope ng-binding" >Backlog</a>
-				</div>
-				<div class="scrollLeftNavigation">
-					<a class="btn ng-scope ng-binding" ng-repeat="sprint in sprints">{{sprint.name}}</a>
-				</div>
-			</div>
-			<div class="boardContent">
-				<div class="topBoardBar">
-				</div>
-				<div id="ticketsList">
-				</div>
-			</div>
-</section>
+<div class="leftNavigation">
+	<div class="staticLeftNavigation">
+		<a class="btn btn-grey fullwidth-btn" >Backlog</a>
+	</div>
+	<div class="scrollLeftNavigation">
+		<a class="btn fullwidth-btn" ng-repeat="sprint in sprints">{{sprint.name}}</a>
+		<a class="btn fullwidth-btn" ng-repeat="sprint in sprints">{{sprint.name}}</a>
+		<a class="btn fullwidth-btn" ng-repeat="sprint in sprints">{{sprint.name}}</a>
+		<a class="btn fullwidth-btn" ng-repeat="sprint in sprints">{{sprint.name}}</a>
+		<a class="btn fullwidth-btn" ng-repeat="sprint in sprints">{{sprint.name}}</a>
+	</div>
+</div>
+<div class="boardContent">
+	<div class="topBoardBar">
+	</div>
+	<div id="ticketsList">
+	</div>
+</div>
