--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="boardContent">
 				<div class="topBoardBar">
-					<a class="btnTopBar" href="">
+					<a class="btnTopBar" href="" ng-click="showGlass=!showGlass">
 						<img title="addNewTicket" alt="Add" src="images/icon_add.png">
 					</a>
 					<a class="btnTopBar" href="">
@@ -24,3 +24,4 @@
 				</div>
 			</div>
 </section>
+<ng-include src="'views/addNewTicket.html'" ng-show="showGlass" ng-controller="PopupController" ></ng-include>
