--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -57,3 +57,23 @@
 .boardContent > #ticketsList{
 	margin: 5px 5px 5px 5px;
 }
+
+/*--------------------- Popup nouveau ticket  --------------------*/
+.newTicketContent{
+	text-align:left;
+}
+
+.inputNewTicket{
+	border-top : none;
+	border-left : none;
+	border-right : none;
+	border-bottom : 1px solid black;
+	width : 50%;
+	font-size: 100%;
+}
+#lblHistoryId{
+	float:left;
+}
+#lblTrackId{
+	float:left;
+}
