--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -9,7 +9,7 @@
 </div>
 <div class="boardContent">
 	<div class="topBoardBar">
-		<a class="btnTopBar" href="">
+		<a class="btnTopBar" href="" ng-click="showGlass=!showGlass">
 			<img title="addNewTicket" alt="Add" src="images/icon_add.png">
 		</a>
 		<a class="btnTopBar" href="">
