--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -20,7 +20,7 @@
 	</div>
 	<div id="ticketsList">
 	    <ul>
-	        <li ng-repeat="ticket in tickets" style="background-color:red;border:1px solid black" drag="ticket" drag-element-id="ticket_{{$index}}"><div id="ticket_{{$index}}" >{{ticket.titre}}</div></li>
+	        <li ng-repeat="ticket in tickets" drag="ticket" drag-element-id="ticket_{{$index}}"><div id="ticket_{{$index}}" >{{ticket.titre}}</div></li>
 	    </ul>
 	</div>
 </div>
