--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -5,11 +5,17 @@
 		Nouveau ticket
 	</header>
 	
-	<section class="popup-section newTicketContent">lblTrackId
-	
-		<label id="lblHistoryId">History id</label><label id="lblHistoryId">lblTrackId id</label><br/><br/><br/><br/>
+	<section class="popup-section newTicketContent">
+		<div class="leftContent">
+			<label id="lblHistory">History id</label><br/><br/>
+			<input type="text" id="inputTitreTicket" value="Titre du ticket"/>
+		</div>
+		<div class="rightContent">
+			<label id="lblTrac">Trac id</label><br/><br/>
+			<label id="lblImportance">Importance </label>
+			<input type="text" id="inputImportance" value="000"/><br/>
+		</div>
 		
-		<input type="text" class="inputNewTicket" value="Titre du ticket"/>
 		
 	</section>
 	
