--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -3,7 +3,7 @@
 		<a class="btn btn-grey fullwidth-btn" >Backlog</a>
 	</div>
 	<div class="scrollLeftNavigation">
-		<a class="btn ng-scope ng-binding" ng-repeat="sprint in sprints" ng-click="clickOnSprint(sprint)">{{sprint.nom}}</a>
+		<a class="btn ng-scope ng-binding" ng-repeat="sprint in sprints" ng-click="clickOnSprint(sprint)">{{sprint.id}} - {{sprint.nom}}</a>
 	</div>
 </div>
 <div class="boardContent">
