--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -20,12 +20,14 @@ body{
 	max-width:1400px;
 	padding:20px 0;
 }
+
 .big-padding-bottom{
 	padding-bottom:100px;
 }
 .text-center{
 	text-align:center;
 }
+.bold{font-weight:bold;}
 
 .btn{
 	display:inline-block;
