--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -60,6 +60,12 @@ body{
 }
 .btn:active{
 	box-shadow: 0 1px 0 0 #999999 inset, 0 -1px 0 0 #FFFFFF inset;
+	padding-top:11px;
+	padding-bottom:9px;
+}
+.big-btn:active{
+	padding-top:21px;
+	padding-bottom:19px;
 }
 
 .btn-new-project{
