Backlog on da top motha fucka

--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -20,7 +20,11 @@
 .leftNavigation li{
 	padding:20px;
 	transition:padding 200ms;
+	font-weight:bold;
 }
+
+.leftNavigation li+li{font-weight:normal;}
+
 .leftNavigation li:hover, .leftNavigation li:focus{
 	background:#F8F8F8;
 }
