Création plannif suite

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,6 +1,7 @@
 <section class="max-width text-center big-padding-bottom">
-	<img src="images/menottes_logo.png" alt="Menottes, The SM Tools.">
+	<img src="images/menottes_logo.png" alt="Menottes, The SM Tools." />
 	<p class="texte">Sélectionnez un projet ou créez en un :</p>
+		<a ng-click="newPlanif()" class="btn big-btn">Planification</a>
 	<div id="main-projects">
 		<a href="" class="btn big-btn"><img src="images/logo_itk-vigne.png" alt="Disp'eau" title="Disp'eau" /></a>
 		<a href="" class="btn big-btn"><img src="images/logo_itk-preco.png" alt="Précovision" title="Précovision" /></a>
