--- a/public/views/login.html
+++ b/public/views/login.html
@@ -8,7 +8,8 @@
 	</div>
 	<div id="secondary-projects">
         <a ng-repeat="projet in projets" class="btn big-btn" ng-click="clickOnProjet(projet)">{{projet.nom}}</a>
-		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Project</a>
+		<a href="" class="btn-new-project" ng-click="createProjet()">New Project</a>
+		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Truc</a>
 	</div>
 </section>
 
