--- a/public/views/login.html
+++ b/public/views/login.html
@@ -10,10 +10,9 @@
 	</div>
 	<div id="secondary-projects">
         <a ng-repeat="projet in projets" class="btn big-btn" ng-click="clickOnProjet(projet)">{{projet.nom}}</a>
-		<a href="" class="btn-new-project" ng-click="createProjet()">New Project</a>
-		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Truc</a>
+		<a href="" class="btn-new-project" ng-click="showGlassNewProject=!showGlassNewProject">Nouveau projet</a>
 	</div>
 </section>
 
 <footer class="main-footer">by the <a href="http://itkweb.com" class="link-footer">iTK Team</a></footer>
-<ng-include src="'views/popup.html'" ng-show="showGlass" ng-controller="PopupController" ></ng-include>
+<ng-include src="'views/addNewProject.html'" ng-show="showGlassNewProject" ng-controller="ProjectController" ></ng-include>
