--- a/public/views/login.html
+++ b/public/views/login.html
@@ -2,6 +2,7 @@
 	<img src="images/menottes_logo.png" alt="Menottes, The SM Tools." />
 	<p class="texte">Sélectionnez un projet ou créez en un :</p>
 		<a ng-click="newPlanif()" class="btn big-btn">Planification</a>
+		<a ng-click="newChoice()" class="btn big-btn">Faire un choix</a>
 	<div id="main-projects">
 		<a href="" class="btn big-btn"><img src="images/logo_itk-vigne.png" alt="Disp'eau" title="Disp'eau" /></a>
 		<a href="" class="btn big-btn"><img src="images/logo_itk-preco.png" alt="Précovision" title="Précovision" /></a>
@@ -9,7 +10,8 @@
 	</div>
 	<div id="secondary-projects">
         <a ng-repeat="projet in projets" class="btn big-btn" ng-click="clickOnProjet(projet)">{{projet.nom}}</a>
-		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Project</a>
+		<a href="" class="btn-new-project" ng-click="createProjet()">New Project</a>
+		<a href="" class="btn-new-project" ng-click="showGlass=!showGlass">New Truc</a>
 	</div>
 </section>
 
