--- a/public/views/login.html
+++ b/public/views/login.html
@@ -16,4 +16,4 @@
 </section>
 
 <footer class="main-footer">by the <a href="http://itkweb.com" class="link-footer">iTK Team</a></footer>
-<ng-include src="'views/popup.html'" ng-show="showGlass" ng-controller="PopupController" ></ng-include>
+<ng-include src="'views/addNewProject.html'" ng-show="showGlassNewProject" ng-controller="ProjectController" ></ng-include>
