récupération des paramètres depuis l'url

--- a/public/views/choice.html
+++ b/public/views/choice.html
@@ -6,7 +6,7 @@
 		<LINK rel="stylesheet" type="text/css" href="../stylesheets/logged.css">
 	</HEAD>
 	<body>
-		<h1>Faire un choix</h1>
+		<h1>{{title}}</h1>
 		<div class="mainContent">
 			
 		</div>
