separation css form

--- a/public/views/planif.html
+++ b/public/views/planif.html
@@ -1,6 +1,6 @@
 
 
-<h1>Titre</h1>
+<h1>Planification - Gestion des ressources</h1>
 <form novalidate id="new-plannif">
 
 	<div class="field" id="duree">
