--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -6,21 +6,27 @@
 	</header>
 	
 	<section class="popup-section newTicketContent">
+
 		<div class="leftContent">
-			<label id="lblHistory">History id</label><br/><br/>
-			<input type="text" id="inputTitreTicket" value="Titre du ticket"/>
+			<label class="labelTicket">History ID</label><br/><br/>
+			<input type="text" ng-model="ticket.history_id" value=""/>
+			<label class="labelTicket">Titre</label><br/><br/>
+			<input type="text" ng-model="ticket.titre" value=""/><br/>
+			<label id="lblDescription">Description</label><br/><br/>
+			<input type="text" ng-model="ticket.description" value=""/><br/>
 		</div>
+
 		<div class="rightContent">
-			<label id="lblTrac">Trac id</label><br/><br/>
 			<label id="lblImportance">Importance </label>
-			<input type="text" id="inputImportance" value="000"/><br/>
+			<input type="text" ng-model="ticket.importance" value="000"/><br/>
+			<label id="lblTracId">TRAC ID</label>
+			<input type="text" ng-model="ticket.trac_id" value=""/><br/>
 		</div>
-		
 		
 	</section>
 	
 	<footer class="popup-footer">
 		<a href="" class="btn" ng-click="hide()">Annuler</a>
-		<a href="" class="btn btn-grey">Enregistrer</a>
+		<a href="" class="btn btn-grey" ng-click="createTicket()">Enregistrer</a>
 	</footer>
 </div>
