--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -3,7 +3,7 @@
 </ul>
 <div class="boardContent">
 	<div class="topBoardBar">
-		<a class="btn" href="" ng-click="showGlass=!showGlass">
+		<a class="btn" href="" ng-click="showGlassNewTicket=!showGlassNewTicket">
 			[LogoFont] Nouveau Ticket
 		</a>
 		<a class="btn" href="">
@@ -19,4 +19,4 @@
 	    </ul>
 	</div>
 </div>
-<ng-include src="'views/addNewTicket.html'" ng-show="showGlass" ng-controller="PopupController" ></ng-include>
+<ng-include src="'views/addNewTicket.html'" ng-show="showGlassNewTicket" ng-controller="NewTicketController" ></ng-include>
