--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -8,9 +8,9 @@
 	<section class="popup-section newTicketContent">
 
 		<div class="leftContent">
-			<label class="labelTicket">History ID</label><br/><br/>
+			<label id="lblHistory">History ID</label><br/><br/>
 			<input type="text" ng-model="ticket.history_id" value=""/>
-			<label class="labelTicket">Titre</label><br/><br/>
+			<label id="lblTicket">Titre</label><br/><br/>
 			<input type="text" ng-model="ticket.titre" value=""/><br/>
 			<label id="lblDescription">Description</label><br/><br/>
 			<input type="text" ng-model="ticket.description" value=""/><br/>
