--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -4,14 +4,14 @@
 	</ul>
 	<div class="boardContent">
 		<div class="topBoardBar">
-			<a class="btn" href="" ng-click="showGlassNewTicket=!showGlassNewTicket">
-				[LogoFont] Nouveau Ticket
+			<a class="btn icon-add" href="" ng-click="showGlassNewTicket=!showGlassNewTicket">
+				Nouveau Ticket
 			</a>
-			<a class="btn" href="">
-				[LogoFont] Imprimer les tickets
+			<a class="btn icon-print" href="">
+				Imprimer les tickets
 			</a>
-			<a class="btn" href="">
-				[LogoFont] Rapport
+			<a class="btn icon-doc" href="">
+				Rapport
 			</a>
 		</div>
 		<div class="ticketsList">
