--- a/public/views/poll.html
+++ b/public/views/poll.html
@@ -2,11 +2,11 @@
   <HTML>
 	<HEAD>
 		<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=iso-8859-1">
-		<TITLE>Faire un choix</TITLE>
+		<TITLE>Sondage</TITLE>
 		<LINK rel="stylesheet" type="text/css" href="../stylesheets/logged.css">
 	</HEAD>
 	<body>
-		<h1>{{title}}</h1>
+		<h1>{{nom}}</h1>
 		 <br>{{open}}</br>
 		<div class="mainContent">
 			
