first pdf generation

--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -7,7 +7,7 @@
 			<a class="btn icon-add" href="" ng-click="showGlassNewTicket=!showGlassNewTicket">
 				Nouveau Ticket
 			</a>
-			<a class="btn icon-print" href="">
+			<a class="btn icon-print" ng-click="printPdf()">
 				Imprimer les tickets
 			</a>
 			<a class="btn icon-doc" href="">
