--- a/public/stylesheets/logged.css
+++ b/public/stylesheets/logged.css
@@ -81,9 +81,15 @@
 		font-size:0.9em;
 		float: right;
 	}
+	.ticket-etat{
+		font-weight: bold;
+		float: right;
+	}
 
-
-
+	.priorityButton:hover{
+		width: 10%;
+		height: 10%;
+	}
 
 
 
