--- a/public/views/addNewPoll.html
+++ b/public/views/addNewPoll.html
@@ -8,6 +8,10 @@
 
 	        <label>Nom du sondage</label> 
 	        <input type="text" id="nom" name="nom" ng-model="poll.nom" placeholder="Nom du sondage"> 
+	        <label>Date d'ouverture</label>
+	        <date-picker select-date="startDateSelected" first-day-of-week="1"></date-picker>
+	        <label>Date de clôture</label> 
+	        <date-picker select-date="endDateSelected" first-day-of-week="1"></date-picker>
 
 		</div>
 	</section>
